--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
 
         <dependency>
-            <groupId>org.hibernate.orm</groupId>
+            <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>6.1.5.Final</version>
         </dependency>
