--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
         <maven.compiler.target>18</maven.compiler.target>
     </properties>
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+
         
         <dependency>
             <groupId>junit</groupId>
